# agentic-loan-origination

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
agents/: .env.example  pyproject.toml
agents/src/agents/: __init__.py  log.py  state.py
agents/src/agents/runtime/: __init__.py  client.py  gateway.py
agents/src/agents/subgraphs/: __init__.py  compliance.py  document.py  packaging.py  risk.py
agents/src/agents/supervisor/: __init__.py  graph.py  nodes.py
agents/src/agents/tools/: __init__.py  compliance_tool.py  llamaparse_tool.py  packaging_tool.py  risk_engine_tool.py  schemas.py
agents/tests/: __init__.py  test_state.py  test_supervisor.py
agents/tests/runtime/: test_runtime_client.py
agents/tests/subgraphs/: __init__.py  test_compliance.py  test_document.py  test_packaging.py  test_risk.py
agents/tests/tools/: __init__.py  test_tool_schemas.py
backend/: .env.example  pyproject.toml
backend/docs/: openapi.json
backend/scripts/: export_openapi.py
backend/src/backend/: __init__.py  main.py
backend/src/backend/clients/: __init__.py  runtime_client.py
backend/src/backend/controllers/: applications.py
backend/src/backend/core/: __init__.py  auth.py  deps.py  logging.py  settings.py
backend/src/backend/repositories/: s3_repository.py
backend/src/backend/schemas/: application_schema.py
backend/src/backend/services/: application_service.py  document_service.py  submission_service.py
backend/tests/: conftest.py  test_application_service.py  test_auth.py  test_document_service.py  test_integration.py  test_submission_service.py
evaluation/: README.md  pyproject.toml
evaluation/golden/: near_prime_golden.json  prime_golden.json  subprime_golden.json
evaluation/src/evaluation/: __init__.py  log.py
evaluation/src/evaluation/cli/: __init__.py  generate_fixtures.py  generate_golden_cases.py  generate_scenarios.py
evaluation/src/evaluation/replay/: __init__.py  drift.py  engine.py  metrics.py  runner.py  trace.py
evaluation/src/evaluation/scenarios/: __init__.py  generator.py  metadata.py  models.py  seed_control.py
evaluation/tests/replay/: __init__.py  test_drift.py  test_engine.py  test_metrics.py  test_runner.py  test_trace.py
evaluation/tests/scenarios/: __init__.py  test_generator.py  test_seed_control.py
shared/: pyproject.toml
shared/src/shared/: __init__.py
shared/src/shared/schemas/: __init__.py  application.py  audit.py  compliance.py  decision.py  documents.py  enums.py  risk.py
shared/tests/schemas/: test_schemas.py
tools/: pyproject.toml
tools/config/: compliance_rules.yaml  risk_policy.yaml
tools/src/tools/: __init__.py  log.py
tools/src/tools/compliance_engine/: __init__.py  config.py  engine.py
tools/src/tools/llamaparse/: __init__.py  client.py  models.py  normalize.py  stub.py
tools/tests/: __init__.py  conftest.py  test_compliance_engine.py  test_llamaparse.py  test_normalize.py  test_packager.py  test_risk_engine.py
(+113 files in other folders)
