[project]
name = "agents"
version = "0.1.0"
description = "LangGraph supervisor, specialist subgraphs, and AgentCore-registered tools."
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-aws>=0.2",
    "langchain-core>=0.2",
    "boto3>=1.34",
    "pydantic>=2.7",
    "httpx>=0.27",
    "shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.uv.sources]
shared = { workspace = true }
