[project]
name = "backend"
version = "0.1.0"
description = "FastAPI application layer for the loan origination system."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-jose[cryptography]>=3.3",
    "boto3>=1.34",
    "aioboto3>=13.0",
    "httpx>=0.27",
    "shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.uv.sources]
shared = { workspace = true }
