[project]
name = "evaluation"
version = "0.1.0"
description = "Golden-case replay harness, evaluation metrics, and drift detection."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "boto3>=1.34",
    "httpx>=0.27",
    "reportlab>=4.2",
    "shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation"]

[tool.uv.sources]
shared = { workspace = true }
