[project]
name = "shared"
version = "0.1.0"
description = "Canonical Pydantic v2 schemas shared across all system packages."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
