[project]
name = "tools"
version = "0.1.0"
description = "Deterministic tool backends: LlamaParse wrapper, risk engine, compliance engine, artifact packager."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "reportlab>=4.2",
    "shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "moto>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]

[tool.uv.sources]
shared = { workspace = true }
